apps/nginx/k8s/my-site-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: my-site-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: dnor.io
      http:
        paths:
          - path: /(.*)
            backend:
              service:
                name: my-site-nginx-service
                port:
                  number: 80
            pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-site-nginx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-site-nginx
  template:
    metadata:
      labels:
        app: my-site-nginx
    spec:
      imagePullSecrets:
        - name: regsecret
      containers:
        - name: my-site-nginx
          image: registry.local:31444/repository/docker-repo/my-site-nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 8Mi
              cpu: 0.1
            limits:
              memory: 16Mi
              cpu: 0.4
---
apiVersion: v1
kind: Service
metadata:
  name: my-site-nginx-service
spec:
  selector:
    app: my-site-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
